welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	var facevert :Boolean = false
	if (!estFaceMur){ 
	avance()
	if (getCouleurSol == "Color.green"){
		facevert = true
	}
	recule()
	}
    // Write your code here
}        
